--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>5.1.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
