--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
                 		<failOnMissingWebXml>false</failOnMissingWebXml>
                 	</configuration>
                 </plugin>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.11.0.3922</version> <!-- Java 8 호환 -->
+				</plugin>
             </plugins>
         </pluginManagement>
     </build>
