--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,23 @@
 			<version>5.1.2</version>
 		</dependency>
 
+		<!-- resilience4j -->
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>1.7.1</version> <!-- Spring Boot 2.x 호환 -->
+		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-reactor</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+		<!-- Actuator (모니터링용) -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
