--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,30 @@
 <!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.3.27</version>
+			<scope>test</scope>
+		</dependency>
+
+        <!-- RestTemplate -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.27</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>5.3.27</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -145,6 +169,12 @@
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
 					<version>3.11.0.3922</version> <!-- Java 8 호환 -->
+				</plugin>
+				<!-- JUnit Test Results & EMMA Coverage Reporting -->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>emma-maven-plugin</artifactId>
+					<inherited>true</inherited>
 				</plugin>
             </plugins>
         </pluginManagement>
